...
                                    <constraint firstAttribute="width" constant="60" id="xct-wT-Pee"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ejL-6J-zaZ">
                                <rect key="frame" x="16" y="680" width="361" height="48"/>
                                <color key="backgroundColor" name="YPWhite"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="C0y-mY-A0S"/>
                                </constraints>
                                <color key="tintColor" name="YPWhite"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти">
...
                                    <action selector="didTapBackButton:" destination="e05-qI-hC7" eventType="touchUpInside" id="rKl-2q-yXK"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="Dzz-hS-uUc"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="UnsplashWebView"/>
                        <constraints>
                            <constraint firstItem="Dzz-hS-uUc" firstAttribute="trailing" secondItem="fEq-X2-Fnt" secondAttribute="trailing" id="06I-V0-hsj"/>
                            <constraint firstItem="lSl-dA-ZYe" firstAttribute="leading" secondItem="Dzz-hS-uUc" secondAttribute="leading" id="9i6-w0-pwi"/>
                            <constraint firstItem="fEq-X2-Fnt" firstAttribute="top" secondItem="Dzz-hS-uUc" secondAttribute="top" constant="40" id="IVH-eo-7KY"/>
                            <constraint firstItem="Dzz-hS-uUc" firstAttribute="bottom" secondItem="lSl-dA-ZYe" secondAttribute="bottom" id="Vwy-AQ-lVQ"/>
                            <constraint firstItem="fEq-X2-Fnt" firstAttribute="leading" secondItem="Dzz-hS-uUc" secondAttribute="leading" id="ha7-0Y-LXp"/>
...
                                <viewLayoutGuide key="contentLayoutGuide" id="GaN-LG-s46"/>
                                <viewLayoutGuide key="frameLayoutGuide" id="G4B-u4-C7b"/>
                                <connections>
                                    <outlet property="delegate" destination="KFW-Y8-gau" id="s6X-C7-QQJ"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xaa-Zz-Lw0" userLabel="BackButton">
                                <rect key="frame" x="8" y="8" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="BackButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="ns2-MI-F2W"/>
                                    <constraint firstAttribute="height" constant="48" id="pnU-88-bCm"/>
                                </constraints>
...
