...
    }
}

// MARK: - Extension for ImagesListViewController methods
extension ImagesListViewController {
    func configCell(for cell: ImagesListCell, with indexPath: IndexPath) {
        cell.likeButton.accessibilityIdentifier = "LikeButton"
        guard let image = presenter?.photos[indexPath.row] else { return }
        cell.cellImage.kf.setImage(
            with: image.fullImageURL,
            placeholder: UIImage(named: "placeholderImage")) { [weak self] _ in
                guard let self = self else { return }
                self.tableView.reloadRows(
...
